--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </div>
     <script>
         const content = {
-            title: "Md Ayub",
-            body: "ayubh9288@gmail.com",
+            title: "Custom domains",
+            body: "Custom domains allow you to serve your site from a domain other than mdayubali.github.io. Learn more.",
             getData(){
                 fetch("https://jsonplaceholder.typicode.com/posts")
                 .then(res=>res.json())
